Add quiz application AI coding guide and initial question bank in French
- Created a comprehensive coding guide for the CSNE quiz application, detailing project overview, architecture, state management, and development workflow.
- Added a JSON question bank with 94 questions related to Stormshield Network certification, including various answer types and correct answers.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <!-- Site de révision du CSNA avec une banque de question dans un fichier csv, gestion des questions avec javascript-->
-    <title>Révision CSNE</title>
+    <title>Révision CSNE - Certification Stormshield Network Expert</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Application de révision pour la certification CSNE (Certified Stormshield Network Expert)">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Révision CSNE</h1>
+        <h1>🛡️ Révision CSNE</h1>
     </header>
     <main>
+        <section id="setup">
+            <div id="setup-card">
+                <h2>Configurez votre quiz</h2>
+                <form id="quiz-setup-form">
+                    <div class="form-group">
+                        <label for="numQuestions">Nombre de questions :</label>
+                        <input type="number" id="numQuestions" min="1" max="94" value="20" required>
+                    </div>
+                    <button type="submit" class="btn-primary">Commencer le quiz</button>
+                </form>
+            </div>
+        </section>
         <section id="questions">
-            <h2>Quizz</h2>
-            <div id="quizz"></div>
+            <div class="quiz-card">
+                <div id="progress-container">
+                    <div class="progress-bar">
+                        <div class="progress-fill" id="progress"></div>
+                    </div>
+                </div>
+                <div id="quizz"></div>
+            </div>
         </section>
         <section id="corrections">
-            <h2>Réponses correctes</h2>
-            <div id="correct-answers"></div>
+            <div class="quiz-card">
+                <h2>❌ Réponses correctes</h2>
+                <div id="correct-answers"></div>
+            </div>
         </section>
     </main>
     <footer>
-        <p>Site réalisé par Rémy Cuvelier - 2024</p>
+        <p>Site réalisé par Rémy Cuvelier - 2025 | Certification CSNE</p>
     </footer>
 </body>
 </html>
