--- a/index.html
+++ b/index.html
@@ -15,12 +15,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
+    <script src="auth.js" defer></script>
 </head>
 <body>
     <header>
         <h1>🛡️ Révision CSNE</h1>
     </header>
     <main>
+        <section id="login-section">
+            <div id="login-card" class="quiz-card">
+                <h2>🔒 Authentification</h2>
+                <div style="background: rgba(37, 99, 235, 0.1); padding: 1rem; border-radius: 0.5rem; margin-bottom: 1.5rem; text-align: center;">
+                    <p>Mode démonstration</p>
+                    <p>Mot de passe : <strong>cisco</strong></p>
+                </div>
+                <form id="login-form">
+                    <div class="form-group">
+                        <label for="password">Entrez le mot de passe :</label>
+                        <input type="password" id="password" class="form-control" required placeholder="Mot de passe">
+                    </div>
+                    <button type="submit" class="btn-primary" style="width: 100%;">Valider</button>
+                </form>
+            </div>
+        </section>
+
         <section id="setup">
             <div id="setup-card">
                 <h2>Configurez votre quiz</h2>
